2.0/themes/digitallounge/style.css
/* ... */
/*Iphone 4 sideways*/
@media (max-width:480px) {

	.site-title {
		left: 18%;
	}

	#colophon {
	    padding: 0px 16px 64px;
	}
}

/*Iphone 6 Plus, 6 verticle*/
@media (max-width: 414px) {
	.home #primary {
		padding: 0px 0px 24px 0px;
	}
	.collection,
	.news-collection {
		width: 100vw;
	}
	.section-title {
		margin: 13px 0 0 8px;
	}

	.news-collection .section-title {
		margin: 2px 0 0 8px;
	}

	#colophon li {
		margin-right: 0px;
	}

	time.icon{
		margin: -24px 8px 0px -26px;
		transform: scale(.35, .35);
	}

	.usclogo {
		position: absolute;
		top: 10px;
		right: 10px;
		width: 60px;
	}

	.main-navigation {
		top: -82px;
	}

	.site-title {
		font-size: 1.3em;
		left: 90px;
		top: 6px;
		width: 160px;
		margin: 0;
	}

	.collection .inner-container > .collection-article:first-child {
		width: 192px;
	}

	.arrow-container {
		margin: 8px 32px 0px 0px;
		z-index: 500;
		float: right;
		width: auto;
		height: auto;
	}

	.facebook, .instagram, .twitter, .youtube, .pinterest {
		margin-top: 0;
	}

	.social-buttons {
		width: 100%;
		text-align: center;
		position: relative;
		bottom: -53px;
	}

	.site-info {
		position: relative;
		top: 57px;
	}

	.taxonomy-description {
		margin: 0 16px;
	}
	
	.archive-header {
		width: 100%;
	}
	
	.archive-header .tool-icon,
	.archive-header > .avatar {
	    clear: both;
	    float: none;
	    left: 50%;
	    margin-left: -64px;
	    margin-top: 0;
	    margin-bottom: -32px;
	}
	
	.archive-header .archive-description-container {
		margin-left: 16px;
	}
	
	.archive-header .page-title {
		text-align: center;
	}
}

/*Iphone 6 verticle*/

@media (max-width: 375px) {
	.site-title {
		left: 70px;
	}
}

/*Iphone 5, 4 verticle*/
@media (max-width: 320px) {

	#eventreadout {
		display: none;
	}
	.site-branding {
		position: relative;
		top: 2px;
		left: -5px;
		font-size: .8em;

	}
	.section-title{
	font-size: 1.1em;
	}
	#colophon {
		height: 272px;
	}
	
}

/*--------------------------------------------------------------
## Universal Graphical Styles
--------------------------------------------------------------*/

.paper-front {
	border-top: 1px solid #eee;
	border-radius: 1px;
	box-shadow: -1px 0 2px 0 rgba(0,0,0,0.12) , 1px 0 2px 0 rgba(0,0,0,0.12) , 0 1px 1px 0 rgba(0,0,0,0.24);
	background-color: #fff;
}

.paper-back {
		background-color: rgb(233,233,233);
}

.window {
	display: none;
	width:80vw;
	height:40vw;
	background-color: white;
	z-index: 5000;
	margin-left: -4vw;
	border: 1px solid #000;
	position: fixed;
	top: 20vh;
	left: 14vw;

}

.window-title {
	height: 32px;
	text-align:	center;
	padding-top: 2px;
	color: white;
	text-transform: uppercase;
	font-size: 1.2em;
	font-weight: 600;
	border-bottom: 1px solid #000;
}

.window-close {
	float: right;
  	margin: -16px -16px 0px 0px;
  	border-radius: 50%;
  	width: 32px;
  	height: 32px;
  	background-color: inherit;
  	border: 1px solid black;
}


.window-calendar {
	height: 644px;
	top:5vh;
	}

@media (max-width:612px) {
	.window-calendar {
	height: auto;
	top:10vh;
	}
}
/*To be used when site is under construction*/
.underconstruction {
}
#insert-events-calendar {
	height: 725px;
	overflow: hidden;
	background-color: white;
}

#footerbranding {
	width: 192px;
	height: 96px;
	position: absolute;
	left: 10px;
	bottom: 6px;
	background-image: url("img/usclogo_alone.svg");
}

.archive #footerbranding,
.single-tribe_events #footerbranding {
	position: relative;
	left: 10px;
	top: -87px;
}
/*--------------------------------------------------------------
## Search
--------------------------------------------------------------*/


.search-title {
	background-color: rgb(245, 136, 34);
}

.window .search-string {
	font-size: 3em;
	text-align: center;
	margin-top: 16px;
	overflow: hidden;

}
.window .search-field {
	height: 25vw;
	width: 90%;
	font-size: 200%;
	border: 0 !important;
	outline: none;
	background-color: transparent;
	text-align: center;
	margin-top: 5vw;

}
.window .search-string .search-submit {
	position: absolute;
    bottom: 15px;
    left: 45%;
    border: none;
    font-size: .3em;
    border-bottom: 0px;
    background-color: transparent;
    font-style: italic;
    font-weight: 100;

}
.calendar-title {
	background-color: rgb(236,120,80);
}

/* Tribe calendar styling fixes to account for moving the links in JS to disable their broken JS events */
#tribe-events-footer a:nth-of-type(2) {
    float: right;
}

#tribe-events-footer > a {
    font-weight: bold;
    font-size: 1.6em;
}

.search .page-title {
	margin-left: 48px;
}

/*--------------------------------------------------------------
## Course Registration Styles
--------------------------------------------------------------*/
.tax-semester .type-course .entry-header .tool-icon {
	float: right;
	width: 64px;
}

.tax-semester .type-course .entry-title {
	clear: none;
	font-size: 24px;
}

.tax-semester .type-course {
	border-bottom: 1px solid #ddd;
}

.tax-semester .type-course .entry-header .entry-meta {
	margin-left: 0;
}

.tax-semester .type-course .entry-meta .byline {
	font-size: 18px;
	line-height: 48px;
	margin-right: 16px;
}

.tax-semester .type-course .entry-meta .author:after {
	content: "|";
	margin-left: 16px;
}

.tax-semester .type-course .entry-content {
	margin-top: 0;
}

#registration-form label {
	display: block;
	font-size: 18px;
	font-weight: 600;
	line-height: 2;
	margin-top: 1em;
}

#submit-registration {
	border: 2px solid #222 !important;
	padding: 8px 16px;
	margin-top: 24px;
	text-shadow: none;
}

#submit-registration:hover, #submit-registration:focus {
	background: #222 !important;
	color: #fff;
}

#registration-notices .notice {
	padding: 16px;
	margin: 16px 0 0 0;
	border-left: 8px solid #ff0;
	background: #ffd;
	color: #000;
}

#registration-notices .notice.error {
	border-left-color: #f00;
	background: #fee;
}

#registration-notices .notice.success {
	border-left-color: #0c0;
	background: #efe;
}
/* ... */

